--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/*General Styles*/
+
 :root {
     --very-light-pink: #c7c7c7;
     --text-input-field: #f7f7f7;
@@ -19,6 +21,8 @@ body{
 .inactive {
     display: none;
 }
+
+/*Text styles*/
 
 .title {
     text-align: center;
@@ -65,7 +69,171 @@ body{
     margin: 0px;
     margin-top: 5px;
 }
+/*List Styles*/
 
+.list-1 {
+    margin: 10px;
+    padding-bottom: 5px;
+}
+
+.list-2 {
+    margin: 10px;
+    border-top: 1px solid var(--very-light-pink);
+    padding-top: 48px;
+}
+
+/* navbar*/
+
+.menu-desktop {
+    position: absolute;
+    right: 50px;
+    top: 39px;
+}
+
+.menu-container {
+    text-align: end;
+    width: 110px;
+    height: auto;
+    border: 1px solid var(--very-light-pink);
+    border-radius: 4px;
+    list-style: none;
+    padding: 15px;
+    margin: 0;
+    background-color: var(--white);
+}
+
+.categories {
+    margin: 0;
+}
+
+.navbar {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    margin: 0px;
+    padding: 5px;
+    box-sizing: border-box;
+    border-bottom: 1px solid var(--very-light-pink);
+}
+
+.navbar-left, 
+.navbar-right {
+    display: flex;
+    height: 30px;
+    width: auto;
+}
+
+.navbar-left ul, 
+.navbar-right ul {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    width: auto;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    margin: 0;
+    margin-left: 30px;
+    font-size: var(--sm);
+    font-weight: 300;
+    text-decoration: none;
+    color: var(--very-light-pink);
+}
+
+.navbar-left ul li, 
+.navbar-right ul li {
+    padding: 5px;
+}
+
+.menu-mobile-nav {
+    display: none;
+}
+
+.logo-navbar {
+    height: 20px;
+    justify-content: center;
+    align-self: center;
+
+}
+
+.navbar-left ul li a {
+    font-size: var(--sm);
+    font-weight: 300;
+    text-decoration: none;
+    color: var(--very-light-pink);
+}
+
+.navbar-left ul li a:hover {
+    font-size: var(--sm);
+    font-weight: 500 !important;
+    text-decoration: none;
+    padding: 2px;
+    padding-left: 4px;
+    padding-right: 4px;
+    border: 1px solid var(--hospital-green); 
+    border-radius: 4px;
+    color: var(--hospital-green) !important;
+}
+
+.email-nav-container{
+    display: flex;
+    justify-content: flex-start;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+}
+
+.email-nav{
+    position: absolute;
+    right: 60px;
+    cursor: pointer;
+}
+
+.icon-arrow {
+    transform: rotate(90deg);
+    position: absolute;
+    height: 10px;
+    right: 55px;
+    top: 15px;
+    cursor: pointer;
+}
+
+.shopping-cart {
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    right: 10px;
+}
+
+.articles-cart {
+    text-align: center;
+    width: 12px;
+    height: 12px;
+    border-radius: 6px;
+    font-size: 10px;
+    color: var(--white);
+    background-color: var(--hospital-green);
+    position: absolute;
+    right: 10px;
+    top: 0px;
+}
+
+.add-cart {
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    padding: 8px;
+    margin: 0px;
+    justify-content: right;
+    cursor: pointer;
+}
+
+
+/*
 .login {
     display: grid;
     place-items: center;
@@ -201,17 +369,6 @@ body{
     text-decoration: none;
 }
 
-.list-1 {
-    margin: 10px;
-    padding-bottom: 5px;
-}
-
-.list-2 {
-    margin: 10px;
-    border-top: 1px solid var(--very-light-pink);
-    padding-top: 48px;
-}
-
 .cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, 240px);
@@ -252,58 +409,6 @@ body{
     padding: 8px;
     align-items: center;
     justify-content: flex-start;
-}
-
-.add-cart {
-    display: grid;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    padding: 8px;
-    margin: 0px;
-    justify-content: right;
-    cursor: pointer;
-}
-
-.menu-container-1 {
-    position: absolute;
-    right: 50px;
-    top: 39px;
-}
-
-.menu-container-2 {
-    text-align: end;
-    width: 110px;
-    height: auto;
-    border: 1px solid var(--very-light-pink);
-    border-radius: 4px;
-    list-style: none;
-    padding: 15px;
-    margin: 0;
-    background-color: var(--white);
-}
-
-.menu-mobile {
-    width: 100%;
-    height: 100vh;
-    border: 1px solid var(--very-light-pink);
-}
-
-.menu-container-mobile {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    text-align: start;
-    border-radius: 4px;
-    list-style: none;
-    padding: 10px;
-    margin: 0;
-}
-
-.footer-menu-mobile {
-    position: absolute;
-    bottom: 0;
 }
 
 .my-order-menu {
@@ -375,124 +480,6 @@ body{
     justify-content: center;
     align-items: center;
     margin: 0;
-}
-
-.navbar {
-    display: flex;
-    width: 100%;
-    height: 40px;
-    margin: 0px;
-    padding: 5px;
-    box-sizing: border-box;
-    border-bottom: 1px solid var(--very-light-pink);
-}
-
-.navbar-left, 
-.navbar-right {
-    display: flex;
-    height: 30px;
-    width: auto;
-}
-
-.navbar-left ul, 
-.navbar-right ul {
-    display: flex;
-    align-items: center;
-    height: 30px;
-    width: auto;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-    margin: 0;
-    margin-left: 30px;
-    font-size: var(--sm);
-    font-weight: 300;
-    text-decoration: none;
-    color: var(--very-light-pink);
-}
-
-.navbar-left ul li, 
-.navbar-right ul li {
-    padding: 5px;
-}
-
-.menu-mobile-nav {
-    display: none;
-}
-
-.logo-navbar {
-    height: 20px;
-    justify-content: center;
-    align-self: center;
-
-}
-
-.categories {
-    margin: 0;
-}
-
-.navbar-left ul li a {
-    font-size: var(--sm);
-    font-weight: 300;
-    text-decoration: none;
-    color: var(--very-light-pink);
-}
-
-.navbar-left ul li a:hover {
-    font-size: var(--sm);
-    font-weight: 500 !important;
-    text-decoration: none;
-    padding: 2px;
-    padding-left: 4px;
-    padding-right: 4px;
-    border: 1px solid var(--hospital-green); 
-    border-radius: 4px;
-    color: var(--hospital-green) !important;
-}
-
-.email-nav-container{
-    display: flex;
-    justify-content: flex-start;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-}
-
-.email-nav{
-    position: absolute;
-    right: 60px;
-    cursor: pointer;
-}
-
-.icon-arrow {
-    transform: rotate(90deg);
-    position: absolute;
-    height: 10px;
-    right: 55px;
-    top: 15px;
-    cursor: pointer;
-}
-
-.shopping-cart {
-    display: flex;
-    justify-content: flex-start;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    right: 10px;
-}
-
-.articles-cart {
-    text-align: center;
-    width: 12px;
-    height: 12px;
-    border-radius: 6px;
-    font-size: 10px;
-    color: var(--white);
-    background-color: var(--hospital-green);
-    position: absolute;
-    right: 10px;
-    top: 0px;
 }
 
 .detail-product-card {
@@ -613,8 +600,70 @@ body{
     background-color: var(--text-input-field);
 }
 
-@media (max-width: 640px) {
+*/
 
+@media (max-width: 640px) {
+    /* navbar*/
+    .menu-mobile-nav {
+        display: block; 
+        width: 20px;
+        height: 20px;
+    }
+
+    .navbar-left {
+        display: flex;
+        justify-content: center;
+    }
+
+    .logo-navbar {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+    }
+
+    .footer-menu-mobile {
+        position: absolute;
+        bottom: 25px;
+    }
+
+    .email-nav {
+        display: none;
+    }
+
+    .icon-arrow {
+        display: none;
+    }
+
+    .menu-desktop {
+        display: none;
+     }
+ 
+     .menu-mobile {
+
+         position: absolute;
+         left: 0;
+         top: 39px;
+         width: 300%;
+         height: 100vh;
+         margin: 0;
+     }
+     
+     .menu-container-mobile {
+         display: flex;
+         flex-direction: column;
+         justify-content: flex-start;
+         text-align: start;
+         border-radius: 4px;
+         list-style: none;
+         padding: 10px;
+         margin: 0;
+     }
+     .categories {
+        display: none !important;
+    } 
+
+/*
     .logo {
        display: block;
     }
@@ -675,41 +724,6 @@ body{
         width: 300px;
     }
 
-    .menu-mobile {
-        width: 20px;
-        height: 20px;
-    }
-
-    .menu-mobile-nav {
-        display: block; 
-        width: 20px;
-        height: 20px;
-    }
-
-    .navbar-left {
-        display: flex;
-        justify-content: center;
-    }
-
-    .categories {
-        display: none !important;
-    } 
-
-    .logo-navbar {
-        position: absolute;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-    }
-
-    .email-nav {
-        display: none;
-    }
-
-    .icon-arrow {
-        display: none;
-    }
-
     .detail-product-card {
         position: absolute;
         left: 0;
@@ -733,4 +747,9 @@ body{
     .total-cart {
         width: 20px;
     }
+
+    
+    
+   
+    */
 }
