--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ body{
     margin: 0px;
     margin-top: 5px;
 }
+
 /*List Styles*/
 
 .list-1 {
@@ -250,6 +251,7 @@ body{
     position: absolute;
     right: 50px;
     top: 39px;
+    z-index: 2;
 }
 
 .menu-container {
@@ -279,6 +281,7 @@ body{
     width: 350px;
     padding: 10px;
     background-color: var(--white);
+    z-index: 2;
 }
 
 .my-orders-cart {
@@ -352,6 +355,15 @@ body{
 
 /*Pagina principal*/
 
+#main-container {
+    position: absolute;
+    top: 39px;
+    right: 0;
+    left: 0;
+    margin: 0;
+    z-index: 1;
+}
+
 .cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, 240px);
@@ -419,12 +431,15 @@ body{
 .detail-product-card {
     display: flex;
     flex-direction: column;
+    position: absolute;
+    top: 39px;
     width: 350px;
     height: 100vh;
     border-radius: 16px;
     position: absolute;
     right: 0;
     background-color: var(--white);
+    z-index: 2;
 }
 
 .detail-product-card button {
@@ -699,6 +714,7 @@ body{
          height: 100vh;
          margin: 0;
          background-color: var(--white);
+         z-index: 2;
      }
      
      .menu-container-mobile {
@@ -752,7 +768,7 @@ body{
         width: 290px;
     }
 
-    /*pagina principal*/   
+    /*pagina principal*/  
     
     .cards-container {
         display: grid;
